# mac_voice_assistant

./: .gitignore  LICENSE  README.md  assistant_model.h5  assistant_model_words.pkl  background_listen.py  intents.json  main.py  my_assistant.py  my_hotkey.py  neuralintents.py  pyproject.toml  requirements.txt  responses.py  settings.py  setup.py  speech.py  test.py  text_typing.py  utilities.py
mac_voice_assistant/: AI.py  default_intents.json  intents.json  main.py  my_assistant.py
mac_voice_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mac_voice_assistant/IA/: IA.py  default_intents.json
mac_voice_assistant/logger/: logger.py
mac_voice_assistant/utils/: logger.py  workers.py
src/mac_voice_assistant/: __init__.py  assistant_model_classes.pkl  assistant_model_words.pkl  main.py  my_assistant.py  responses.py  settings.py  speech.py  start.py  utilities.py
src/mac_voice_assistant.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test.py  to do  voices.py
