[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mac_voice_assistant"
version = "0.1.0"
authors = [
  { name="Manish Raj", email="manishraj1.618@gmail.com" },
]
description = "A voice assistant prototype"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Mac OS",
]

[project.urls]
"Homepage" = "https://github.com/Cre5cend0/mac"
"Bug Tracker" = "https://github.com/Cre5cend0/mac/issues"
