[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mac_voice_assistant"
version = "0.2.7"
authors = [{ name="Manish Raj", email="manishraj1.618@gmail.com" }]
description = "A voice assistant prototype"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    'Development Status :: 1 - Planning',
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Bug Tracking",
    ]
keywords=['python', 'mac', 'voice', 'assistant']
dependencies = [
    'numpy>=1.24.0',
    'nltk>=3.8',
    'tensorflow>=2.11.0',
    'PyAudio==0.2.12',
    'playsound>=1.3.0',
    'pyttsx3>=2.90',
    'SpeechRecognition==3.8.1',
    'pyjokes>=0.6.0'
    ]

[project.urls]
"Homepage" = "https://github.com/Cre5cend0/mac"
"Bug Tracker" = "https://github.com/Cre5cend0/mac/issues"
